salesforce_sfdx/main/default/objects/Otter_Copier_Configuration__mdt/Otter_Copier_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata contains settings instructing the copier-functionality (what to copy, what to skip, how to identify related records, etc.)</description>
    <label>Otter Copier Configuration</label>
    <pluralLabel>Otter Copier Configuration</pluralLabel>
</CustomObject>