salesforce_sfdx/main/default/objects/Otter_Copier_Configuration__mdt/fields/cloningScopeProperty__c.field-meta.xml
<CustomField>
    <fullName>cloningScopeProperty__c</fullName>
    <label>cloningScopeProperty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>