salesforce_sfdx/main/default/objects/Otter_Copier_Configuration__mdt/fields/filter__c.field-meta.xml
<CustomField>
    <fullName>filter__c</fullName>
    <label>filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>