salesforce_sfdx/main/default/objects/Otter_Copier_Configuration__mdt/fields/foreingKeyApiName__c.field-meta.xml
<CustomField>
    <fullName>foreingKeyApiName__c</fullName>
    <label>foreingKeyApiName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>