salesforce_sfdx/main/default/objects/Otter_Copier_Configuration__mdt/fields/objectApiName__c.field-meta.xml
<CustomField>
    <fullName>objectApiName__c</fullName>
    <label>objectApiName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>