salesforce_sfdx/main/default/objects/Otter_Copier_Configuration__mdt/fields/relatedItemObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>relatedItemObjectApiName__c</fullName>
    <label>relatedItemObjectApiName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>